add recipe and more effiecnt

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ol>
     <li><a href="recipes/FluffyFrenchToast.html">Fluffy French Toast</a></li>
     <li><a href="recipes/PestoPasta.html">Pesto Pasta</a></li>
+    <li><a href="recipes/ChocolateChipCookies.html">Chocolate Chip Cookies</a></li>
     </ol>
 </body>
 
