--- a/recipes/FluffyFrenchToast.html
+++ b/recipes/FluffyFrenchToast.html
@@ -11,7 +11,7 @@
     <p>There may be no better morning breakfast than Fluffy French Toast. This recipe will take roughly
          10 minutes for prep time and 20 minutes for cooking and will yield about 12 servings, leaving you plenty 
         for tomorrow.</p>
-    <h2>Ingrediants</h2>
+    <h2>Ingredients</h2>
      <ul>
     <li>1/4 of all-purpose flour</li>
      <li>1 cup of milk</li>
