--- a/recipes/PestoPasta.html
+++ b/recipes/PestoPasta.html
@@ -9,7 +9,7 @@
         <img src="PestoPasta.webp">
         <h2>Description</h2>
         <P>A Tried and True classic of pasta and sauce will make even the pickiest eater happy. This PestoPasta recipe takes only 15 mins to make and is easy as 1,2,3.</P>
-        <h2>Ingrediants</h2>
+        <h2>Ingredients</h2>
         <ul>
             <li>1 (16 ounce) package pasta</li>
             <li>2 tablespoons of olive oil</li>
